--- a/permission.html
+++ b/permission.html
@@ -1,12 +1,12 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-<meta charset='utf-8'/><meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'/><!--[if IE]><meta content='IE=edge; IE=9; IE=8; IE=7; chrome=1' http-equiv='X-UA-Compatible'/><![endif]-->
     <title>Permission Page</title>
-	<meta content='notranslate' name='google'/>
     <style>
         body {
-            font-family: "Times New Roman",Times,serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
@@ -15,11 +15,10 @@
             height: 100vh;
             text-align: center;
             background-color: #fafafa;
-			line-height:2
         }
 
         p {
-            color: #0000EE;
+            color: #666;
             font-size: 1.2em;
         }
     </style>
@@ -32,6 +31,8 @@
     <script>
         var text = new URL(location.href).searchParams.get('promptText')
         document.querySelector('p').innerHTML = text;
+        var isThisWindowPopup = window.opener && window.opener !== window || !window.menubar.visible || false;
+
         async function registerServiceWorker() {
             if ("serviceWorker" in navigator) {
                 try {
@@ -84,7 +85,7 @@
                 const permission = await requestPermission();
                 if (permission !== 'granted') {
                     console.log('Permission not granted. Please try again.'); // replaced alert with console.log
-                    if (window.menubar.visible) {
+                    if (!isThisWindowPopup) {
                         history.back();
                     } else {
                         window.close();
@@ -100,14 +101,14 @@
                     command: "amp-web-push-subscribe",
                     url: new URL(location.href).searchParams.get('parentOrigin')
                 });
-                if (window.menubar.visible) {
+                if (!isThisWindowPopup) {
                     history.back();
                 } else {
                     window.close();
                 }
             } catch (error) {
                 console.error(`Error occurred: ${error}`);
-                if (window.menubar.visible) {
+                if (!isThisWindowPopup) {
                     history.back();
                 } else {
                     window.close();
